# explicit-memory

./: .gitignore  README.md  setup.cfg  train-explore-baseline.py  train-explore-baseline.yaml  train-explore.py  train-explore.yaml  train-mm.py  train-mm.yaml
.github/workflows/: docs.yaml  pytest.yaml  test.yaml
AgentRoomEnv0/: README.md
AgentRoomEnv1/: 02.PPO.ipynb  README.md  foo.ipynb  hp-tuning-analysis.ipynb  hp-tuning.ipynb  plotting.py  roomenv-v1 copy 2.ipynb  roomenv-v1 copy.ipynb  roomenv-v1.ipynb  scores.md  train-ppo.ipynb  train.yaml
AgentRoomEnv1/agent/: __init__.py  dqn.py  handcrafted.py  ppo.py
AgentRoomEnv2/: IJCAI-subject-areas.md  README.md  TODOs.md  compare-results.ipynb  foo.py  hp-tuning copy 2.ipynb  hp-tuning copy 3.ipynb  hp-tuning copy.ipynb  hp-tuning.ipynb  learn-graph.ipynb  report-18-Dec-2023.ipynb  roomenv-v2 copy 2.ipynb  roomenv-v2 copy 3.ipynb  roomenv-v2 copy.ipynb  roomenv-v2-dqn.ipynb  roomenv-v2-l.ipynb  roomenv-v2-m.ipynb  roomenv-v2-ppo.ipynb  roomenv-v2-s.ipynb  roomenv-v2-xs.ipynb  roomenv-v2-xxs.ipynb  roomenv-v2.ipynb  run-training.py  scores.md  three-rooms.ipynb  train-dqn.ipynb  train-ppo.ipynb  train.py  train_multiple.py
RoomEnv-v0/: README.md  agent.py  train.py  train.yaml
RoomEnv-v1/: 01-dqn.ipynb  01.dqn.ipynb  README.md  agent.py  explicit-memory-v1.ipynb  model.py  optuna.ipynb  plot.ipynb  plotting.py  roomenv-v1.ipynb  train.py  train.yaml  train_multiple.py
RoomEnv-v2/: README.md  roomenv-v2.ipynb
RoomEnv0/: agent.py  train.py
RoomEnv1/: 02.PPO.ipynb  agent.py  roomenv-v1.ipynb  train.py  train.yaml  train_multiple.py
RoomEnv2/: agent.py  roomenv-v2 copy.ipynb  roomenv-v2.ipynb  train.py  train.yaml  train_multiple.py
agent/: __init__.py  handcrafted.py
explicit_memory/: __init__.py  memory.py  memory0.py  nn.py  policy.py  utils.py  visualize_results.py
humemai/: memory.py  policy.py  utils.py
notebooks/: 16-Dec-2023.ipynb
reports/: 06-Nov-2023.ipynb  27-Nov-2023.ipynb
test/: test_agent_for_room_env2.py  test_memory.py  test_model_LSTM.py  test_policy.py  test_train_dqn_lightning.py  test_train_rl_agent.py  test_utils.py
(+56 files in other folders)
