[metadata]
name = explicit_memory
version = 
author = Taewoon Kim
author_email = tae898@gmail.com
description = Using explicit long-term memory to solve RL problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tae898/explicit-memory
project_urls =
    Bug Tracker = https://github.com/tae898/explicit-memory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires=
    ; gymnasium>=0.27.1
    ; torch>=1.13.1
    ; PyYAML>=6.0
    ; tqdm

[options.packages.find]
exclude =
    test*
    RoomEnv*