[metadata]
name = explicit_memory
version = 
author = 
author_email = 
description = Using explicit long-term memory to solve RL problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires=
    ipython>=8.20.0
    matplotlib>=3.8.2


[options.packages.find]
exclude =
    test*